--- a/input.css
+++ b/input.css
@@ -4,12 +4,15 @@
 
 .text-logo {
   font-size: 2.4rem;
-  font-size: clamp(2.4rem, 2.04rem + 0.97vw, 3.2rem);
+  fontsize: clamp(2.4rem, 2.04rem + 0.97vw, 3.2rem);
 }
 
 .text-hero {
   font-size: 4rem;
-  font-size: clamp(4rem, 1.89rem + 5.89vw, 8.8rem);
+  font-size: clamp(4rem, 1.6rem + 6.41vw, 8.8rem);
+  font-weight: 700;
+  letter-spacing: -0.028em;
+  line-height: 1.2;
 }
 
 .text-default {
@@ -22,9 +25,36 @@
   font-size: clamp(3.2rem, 2.28rem + 2.47vw, 4.8rem);
 }
 
+/* TODO: Convert to tailwind */
+.form_control {
+  position: relative;
+  margin-bottom: 16px;
+}
+
+.form_control input,
+.form_control textarea {
+  width: 100%;
+  background-color: transparent;
+  padding-block: 16px;
+  padding-inline: 24px;
+  border: none;
+  border-bottom: 1px solid hsl(0, 0%, 100%);
+  line-height: 1.625;
+  color: hsl(0, 0%, 85%);
+}
+
+.form_control input:focus-visible:invalid ~ .form_icon,
+.form_control textarea:focus-visible:invalid ~ .form_icon {
+  display: inline-block;
+}
+
 @layer utilities {
+  .text-sub {
+    @apply text-[1.6rem] leading-[1.625] tracking-[0.143em] font-bold uppercase bg-no-repeat text-white bg-clip-text bg-transitionGradient lg:hover:text-transparent bg-default lg:hover:bg-hover transition-all duration-[.2s] ease-linear;
+  }
+
   .wrapper {
-    @apply w-[90%] md:w-[95%] max-w-[1124px] mx-auto;
+    @apply w-[90%] md:w-[92%] max-w-[1124px] mx-auto;
   }
 
   .transition-on-hover {
@@ -43,12 +73,8 @@
     @apply absolute left-[-10000px] top-auto w-[1px] h-[1px] hidden;
   }
 
-  .text-sub {
-    @apply text-[1.6rem] leading-[1.625] tracking-[2.29px] font-bold uppercase;
-  }
-
   .text-decor {
-    @apply underline decoration-2 md:decoration-[2px] underline-offset-[10px] decoration-bg-contact;
+    @apply underline decoration-2 underline-offset-[10px] decoration-bg-contact;
   }
 
   .skill-container {
@@ -57,5 +83,13 @@
 
   .skill-title {
     @apply leading-[1.17] font-bold text-skill mb-[2px];
+  }
+
+  .projects-name {
+    @apply text-[2.4rem] leading-[1.3] font-bold uppercase mb-[7px];
+  }
+
+  .tags {
+    @apply uppercase mr-[12px] text-text-secondary leading-[1.5];
   }
 }
