--- a/input.css
+++ b/input.css
@@ -25,24 +25,6 @@
   font-size: clamp(3.2rem, 2.28rem + 2.47vw, 4.8rem);
 }
 
-/* TODO: Convert to tailwind */
-.form_control {
-  position: relative;
-  margin-bottom: 16px;
-}
-
-.form_control input,
-.form_control textarea {
-  width: 100%;
-  background-color: transparent;
-  padding-block: 16px;
-  padding-inline: 24px;
-  border: none;
-  border-bottom: 1px solid hsl(0, 0%, 100%);
-  line-height: 1.625;
-  color: hsl(0, 0%, 85%);
-}
-
 .form_control input:focus-visible:invalid ~ .form_icon,
 .form_control textarea:focus-visible:invalid ~ .form_icon {
   display: inline-block;
@@ -50,7 +32,7 @@
 
 @layer utilities {
   .text-sub {
-    @apply text-[1.6rem] leading-[1.625] tracking-[0.143em] font-bold uppercase bg-no-repeat text-white bg-clip-text bg-transitionGradient lg:hover:text-transparent bg-default lg:hover:bg-hover transition-all duration-[.2s] ease-linear;
+    @apply text-[1.6rem] leading-[1.625] tracking-[0.143em] font-bold uppercase bg-no-repeat text-white bg-clip-text bg-transitionGradient lg:hover:text-transparent bg-default lg:hover:bg-hover transition-all duration-[.3s] ease-linear;
   }
 
   .wrapper {
@@ -74,7 +56,7 @@
   }
 
   .text-decor {
-    @apply underline decoration-2 underline-offset-[10px] decoration-bg-contact;
+    @apply underline decoration-2 underline-offset-[10px] decoration-contact;
   }
 
   .skill-container {
@@ -90,6 +72,6 @@
   }
 
   .tags {
-    @apply uppercase mr-[12px] text-text-secondary leading-[1.5];
+    @apply uppercase mr-[12px] text-secondary leading-[1.5];
   }
 }
